# DirQ

./: .gitignore  Cargo.toml  README.md  pyproject.toml
src/: complex.rs  graph.rs  graph_io.rs  gui.rs  lib.rs  main.rs  util.rs
src/Legacy/: cofaces.rs  fold_reduce.rs  henri_q_near.rs
src/directed_q/: mod.rs
src/directed_q/new/: bottom_up.rs  local_cofaces.rs  mod.rs  mutex.rs  naive.rs  single_thread.rs  split_and_merge.rs
src/directed_q/old/: bottom_up.rs  local_cofaces.rs  mod.rs  mutex.rs  naive.rs  single_thread.rs  split_and_merge.rs
src/directed_q/original/: bottom_up.rs  local_cofaces.rs  mod.rs  mutex.rs  naive.rs  single_thread.rs  split_and_merge.rs
supplementals/: matrix_based.py  q_enumeration.py
